adapt to latest library

--- a/notebooks/Tests-and-demos.ipynb
+++ b/notebooks/Tests-and-demos.ipynb
@@ -11,17 +11,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7f959741-1cee-4936-a9a6-84aa45af0940",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from sidecar import Sidecar\n",
-    "s = Sidecar(title=\"Test\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
    "id": "e54596f1-61d6-4704-90de-a405f8fe6b00",
    "metadata": {},
    "outputs": [],
@@ -30,8 +19,8 @@
     "import json\n",
     "import time\n",
     "import ipywidgets as widgets\n",
-    "from cad_viewer_widget import AnimationTrack, CadViewer\n",
-    "from cad_viewer_widget.sidecar import open_viewer, get_viewer, get_viewers, get_default, close_viewer, close_viewers\n",
+    "from cad_viewer_widget import AnimationTrack, CadViewer, show, get_sidecar, get_sidecars, get_default, close_sidecar, close_sidecars, open_viewer, set_default\n",
+    "\n",
     "from cad_viewer_widget.utils import numpyify\n",
     "\n",
     "names = [\"hexapod\", \"hexapod_m\", \"box\", \"box1\", \"boxes\", \"edges\", \"faces\", \"vertices\", \"pylones\", \"box-edges\", \"box-faces\", \"box-vertices\"]\n",
@@ -55,94 +44,205 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "63fc25e6-5394-4e9f-98c4-b5205c7cbf5f",
+   "cell_type": "markdown",
+   "id": "0d213e9d-8ec8-48aa-bb35-da7c1ea5ead7",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "open_viewer(\n",
-    "     \"CQ1\", \n",
-    "     anchor=\"right\",\n",
-    "     height=480,\n",
-    "     cad_width=640,\n",
-    ")\n",
-    "cv = get_viewer(\"CQ1\")"
+    "## openviewer and add_shapes"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "96369f90-0ef4-4995-8fce-61e07bbb15ed",
+   "id": "6942399f-9309-4555-9a80-e542a2154941",
    "metadata": {},
    "outputs": [],
    "source": [
-    "open_viewer(\n",
-    "    \"CQ2\", \n",
-    "    anchor=\"tab\",\n",
+    "cv2 = open_viewer(\n",
+    "    title=\"CVW 2\",\n",
+    "    anchor=\"split-right\",\n",
+    "    cad_width=640,\n",
+    "    tree_width=250,\n",
+    "    height=480,\n",
+    "    theme=\"light\",\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "97f60f6c-9766-4627-bdb8-c74e8395b4cf",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "name = \"hexapod\"\n",
+    "cv2.add_shapes(\n",
+    "    objects[name], \n",
+    "    states[name],\n",
+    "\n",
+    "    #tools=False,\n",
+    "    #ortho=False,\n",
+    "    control=\"trackball\",\n",
+    "    #control=\"orbit\",\n",
+    "    axes=False,\n",
+    "    axes0=False,\n",
+    "    grid=(True,True, False),\n",
+    "    ticks=10,\n",
+    "    transparent=True,\n",
+    "    #black_edges=True,\n",
+    "\n",
+    "    normal_len=0,\n",
+    "    default_edge_color=\"#707070\",\n",
+    "    default_opacity=0.5,\n",
+    "    ambient_intensity=0.5,\n",
+    "    direct_intensity=0.3,\n",
+    "\n",
+    "    reset_camera=False,\n",
+    "    #position = (865.4844022079983, -276.23389988421786, 335.21716816984906),\n",
+    "    #quaternion = (0.43557639340677845, 0.3648618806188253, 0.4409953598863984, 0.6947460731351442),\n",
+    "    #zoom=0.5,\n",
+    "    timeit=False,\n",
+    "    \n",
+    "    zoom_speed=0.5,\n",
+    "    pan_speed=0.5,\n",
+    "    rotate_speed=1.0,\n",
+    "    js_debug=True,\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "57678a36-1103-4c96-ae39-f2f79a85921a",
+   "metadata": {},
+   "source": [
+    "## show"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "0a85a650-fa48-410a-b79f-b3c112d33dcf",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "name = \"hexapod\"\n",
+    "cv = show(\n",
+    "    objects[name], \n",
+    "    states[name],\n",
+    "    title=\"CVW 1\",\n",
     "    height=480,\n",
     "    cad_width=640,\n",
-    "    pinning=True\n",
-    ")\n",
-    "cv2 = get_viewer(\"CQ2\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "126a73b8-88ae-4d14-ae73-f9b75c59713c",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "name = \"vertices\"\n",
-    "cv.add_shapes(\n",
-    "    objects[name],\n",
-    "    states[name]\n",
+    "    tools=True,\n",
     ")"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d20f6178-8d8e-4fc9-802c-b12405d8ab80",
+   "id": "25bb9904-f331-43c6-b0c7-4ea9bb74715f",
    "metadata": {},
    "outputs": [],
    "source": [
-    "name = \"edges\"\n",
-    "cv2.add_shapes(\n",
-    "    objects[name],\n",
-    "    states[name]\n",
+    "name = \"boxes\"\n",
+    "cv2 = show(\n",
+    "    objects[name], \n",
+    "    states[name],\n",
+    "    title=\"CVW 2\",\n",
+    "    anchor=\"split-right\",\n",
+    "    height=480,\n",
+    "    cad_width=640,\n",
+    "    \n",
+    "    ortho=False,\n",
+    "    control=\"orbit\",\n",
+    "    axes=True,\n",
+    "    grid=(True,True, False),\n",
+    "    ticks=5,\n",
+    "    transparent=True,\n",
+    "    #black_edges=True,\n",
+    "\n",
+    "    normal_len=2,\n",
+    "    default_edge_color=\"#707070\",\n",
+    "    default_opacity=0.5,\n",
+    "    ambient_intensity=0.5,\n",
+    "    direct_intensity=0.3,    \n",
     ")"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "154256cd-0130-49b9-bb3d-e88953ab90ce",
+   "id": "19b4953e-3b6a-44d5-86e8-91e70b6f2033",
    "metadata": {},
    "outputs": [],
    "source": [
-    "cv.widget.disposed"
+    "cv.close()\n",
+    "cv.disposed"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "bf563b3b-5769-40e6-b3fd-bbcbf6272c1a",
+   "id": "f1639c0f-10af-4414-9c2e-b87e765afbbb",
    "metadata": {},
    "outputs": [],
    "source": [
-    "cv2.widget.disposed"
+    "cv2.close()\n",
+    "cv2.disposed"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "deb41d73-8331-41ac-abd5-0c3c478c07f7",
+   "metadata": {},
+   "source": [
+    "# Use default sidecar"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ba0782db-c4ba-4531-810d-1448a690c67a",
+   "id": "434d6178-2c52-49ec-a69d-454e07741800",
    "metadata": {},
    "outputs": [],
    "source": [
-    "cv.close()"
+    "set_default(\"CVW 1\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "1919ce62-5e42-439f-b389-bbb74d4b3f06",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "name = \"faces\"\n",
+    "cv = show(\n",
+    "    objects[name], \n",
+    "    states[name],\n",
+    "    height=600,\n",
+    "    cad_width=800,\n",
+    "    reset_camera=False\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a6aaed86-e0ae-4bd4-94fc-da4c441c20d0",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "cv.dump_model()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "56901773-4222-4aa4-96dc-ea6a33af7b6f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "cv.widget.zoom = 1"
    ]
   },
   {
@@ -152,7 +252,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "get_viewer(\"CQ2\")"
+    "get_sidecar(\"CVW 1\").widget.position"
    ]
   },
   {
@@ -162,7 +262,17 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "get_viewers()"
+    "get_sidecars()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "93ade311-ade8-47ff-859c-0a044f347103",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "cv.position, cv.quaternion"
    ]
   },
   {
@@ -172,7 +282,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "close_viewers()"
+    "close_sidecars()"
    ]
   },
   {
@@ -186,255 +296,56 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1b6645d7-44fa-4081-948c-f1101c2186cb",
+   "id": "d063c889-79be-402a-8230-7936a0ef1c9a",
    "metadata": {},
    "outputs": [],
    "source": [
-    "cv3 = open_viewer(\n",
-    "     height=480,\n",
-    "     cad_width=640,\n",
-    ")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "f56f62ad-86c6-4728-bea3-4f0d5d172cc8",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "name = \"vertices\"\n",
-    "cv3.add_shapes(\n",
+    "name = \"hexapod\"\n",
+    "cv3 = show(\n",
     "    objects[name],\n",
-    "    states[name]\n",
-    ")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "db8eafbf-0ee8-47fd-83ab-fb7ee3ef1bfd",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "cv3.disposed"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "8f76dd5f-0723-44fd-b83d-2a7f09f899fc",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "cv4 = open_viewer(\n",
+    "    states[name],\n",
     "    height=600,\n",
     "    cad_width=800,\n",
-    ")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "9439f0b5-21df-416c-b06c-70323e38dcce",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "name = \"boxes\"\n",
-    "cv4.add_shapes(\n",
-    "    objects[name],\n",
-    "    states[name]\n",
-    ")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "d1694d8d-66d7-4537-b144-c0e6fdf15d12",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "64a0ccd7-abbc-4f8a-8c53-265b3e406b51",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "a7eb42c7-edcd-404b-9528-538281b90791",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "21d0d3c2-fd01-4e03-b9a3-1cfc31b6dfc6",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "68954874-8a5b-4f82-a401-226ffe8cf584",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "28d65336-9e60-424c-8ae6-dc3b1f40c428",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "700845b9-9c1f-41bb-bf5c-63f6986e991f",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "19c7dc14-81ab-4b1a-95d1-5373a0a03fb3",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "SIDECARS = {}\n",
-    "def open_viewer(title, anchor=\"right\", **kwargs):\n",
-    "    viewer = get_viewer(title)\n",
-    "    print(\"viewer\", viewer)\n",
-    "    if viewer is not None and not viewer.disposed:\n",
-    "        viewer.execute(\"dispose\", None)\n",
-    "        print(f\"Closed existing viewer {title}\")\n",
+    "    control=\"trackball\",\n",
+    "    tools=True,\n",
     "\n",
-    "    cv = CadViewer(sidecar=title, anchor=anchor, **kwargs)\n",
-    "    SIDECARS[title] = cv\n",
-    "    display(cv.widget)\n",
-    "    print(f'Done, see viewer {title}. To access the viewer, use get_viewer(\"{title}\")')\n",
-    "open_viewer(\"CQ1\")"
+    "    axes=True,\n",
+    "    axes0=True,\n",
+    "    grid=[True, False, True],\n",
+    "    transparent=True,\n",
+    "    black_edges=True,\n",
+    "    ortho=False,\n",
+    "    timeit=True,\n",
+    "#    normal_len=5,\n",
+    "#    reset_camera=False,\n",
+    ")"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "46cd76a5-9eff-495d-8c07-a1346dab1b92",
+   "id": "e47f9799-10bd-4708-b233-4905f49a9e92",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "cv3.widget.grid"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "daf89154-8510-45f5-9a56-f8b974dafefc",
    "metadata": {},
    "outputs": [],
    "source": [
     "name = \"faces\"\n",
-    "cv1 = show(\n",
+    "cv4 = show(\n",
     "    objects[name],\n",
     "    states[name],\n",
-    "    height=480,\n",
-    "    cad_width=640,\n",
-    "    sidecar=\"CQ1\", anchor=\"tab\", \n",
-    "    ortho=True,\n",
-    "    control=\"trackball\",\n",
-    "    grid=(False, False, False),\n",
-    ")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "873b94da-1b47-4405-b115-e1e32e36f212",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "name = \"edges\"\n",
-    "cv2 = show(\n",
-    "    objects[name],\n",
-    "    states[name],\n",
-    "    # sidecar=\"CQ2\", anchor=\"split-right\",\n",
-    "    ortho=True,\n",
-    "    control=\"trackball\",\n",
-    "    grid=(False, True, False),\n",
-    "    pinning=True\n",
-    ")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "cebc816b-7500-499f-a89a-bea9bbccf198",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "cv = show(objects[name], states[name], pinning=True)\n",
-    "cv.execute(\"viewer.pinAsPng\", None)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "53e708b6-3a9d-4d79-827c-d1c1e7d2058f",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "get_viewers()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "2cb4c179-8544-4188-b8cb-e21dbdcfec8b",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "set_viewer(\"CQ1\")\n",
-    "cv = show(objects[name], states[name])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "a163309e-b980-4893-89fb-93141690847a",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "cv2.position = cv1.position\n",
-    "cv2.quaternion = cv1.quaternion"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "8ac3adb6-9dd5-43c9-9797-b91459813b47",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "close_viewer(\"CQ1\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "b3b810bd-a347-46f5-bcdf-90d39929cb10",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "close_viewer(\"CQ2\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "cae0e910-021d-4023-b5e3-fcd4b76e1b77",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "close_viewers()"
+    "\n",
+    "    height=600,\n",
+    "    cad_width=800,\n",
+    ")\n"
    ]
   },
   {
@@ -460,10 +371,9 @@
     "    cad_width=640, \n",
     "    height=480, \n",
     "    ortho=True,\n",
-    "    control=\"orbit\",\n",
+    "    control=\"trackball\",\n",
     "    grid=(False, False, False),\n",
     "    tools=True,\n",
-    "    pinning=True,\n",
     ")"
    ]
   },
@@ -485,7 +395,6 @@
     "    control=\"orbit\",\n",
     "    grid=(False, False, False),\n",
     "    tools=True,\n",
-    "    pinning=True,\n",
     ")"
    ]
   },
@@ -512,32 +421,17 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "78bd48df-b6c9-4939-bd80-2ea47be42ef3",
+   "id": "3947d28e-8f1e-41df-bea5-27b63679a7fd",
    "metadata": {},
    "outputs": [],
    "source": [
     "cv = open_viewer(\n",
-    "    cad_width=640, height=480, \n",
-    "    sidecar=\"Examples\", anchor=\"split-right\"\n",
-    ")"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "fe9dd08c-4a59-43d9-923a-8b93707fe67d",
-   "metadata": {},
-   "source": [
-    "## Observe Javascript events"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "819cff18-3c2c-467d-8d44-354b3606225e",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "cv.js_debug = False"
+    "    title = \"Examples\",\n",
+    "    anchor=\"right\",\n",
+    "    cad_width=640,\n",
+    "    height=480\n",
+    ")\n",
+    "cv.js_debug=True"
    ]
   },
   {
@@ -555,29 +449,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def show(name):\n",
-    "    cv.add_shapes(\n",
-    "        objects[name],\n",
-    "        states[name],\n",
-    "        ortho=True,\n",
-    "        control=\"trackball\",\n",
-    "        ticks=20,\n",
-    "    #    axes=True,\n",
-    "        axes0=False,\n",
-    "        grid=[True, False, False], \n",
-    "        transparent=False,\n",
-    "        black_edges=False,\n",
-    "        edge_color=\"#707070\",\n",
-    "        ambient_intensity=0.5,\n",
-    "        direct_intensity=0.3,\n",
-    "        reset_camera=True,\n",
-    "    #    position=[-580.0, 200.0, 750.0],\n",
-    "    #    quaternion=[-0.33, 0.026, 0.91, 0.24],\n",
-    "    #    zoom=0.5,\n",
-    "    #    timeit=True,\n",
-    "    #    animation_loop=False\n",
-    "    )\n",
-    "\n",
     "menu = widgets.Dropdown(\n",
     "    options=names,\n",
     "    value=names[0],\n",
@@ -587,11 +458,21 @@
     "\n",
     "def on_change(change):\n",
     "    if change['type'] == 'change' and change['name'] == 'value':\n",
-    "        show(change['new'])\n",
+    "        name = change['new']\n",
+    "        show(    \n",
+    "            objects[name],\n",
+    "            states[name],\n",
+    "            title=\"Examples\",\n",
+    "            control=\"orbit\"\n",
+    "        )\n",
     "\n",
     "menu.observe(on_change)\n",
     "\n",
-    "show(names[0])\n",
+    "show(\n",
+    "    objects[names[0]],\n",
+    "    states[names[0]],\n",
+    "    title=\"Examples\"    \n",
+    ")\n",
     "menu"
    ]
   },
@@ -711,7 +592,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "ec = cv.edge_color"
+    "ec = cv.default_edge_color"
    ]
   },
   {
@@ -721,7 +602,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "cv.edge_color = \"#ff0000\""
+    "cv.default_edge_color = \"#ff0000\""
    ]
   },
   {
@@ -731,7 +612,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "cv.edge_color = ec"
+    "cv.default_edge_color = ec"
    ]
   },
   {
@@ -991,6 +872,29 @@
    "metadata": {},
    "source": [
     "# Animation"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d7df563d-e026-4c1d-b865-22adc09cfba6",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "name = \"hexapod\"\n",
+    "cv = show(\n",
+    "    objects[name],\n",
+    "    states[name],\n",
+    "    title=\"Animation\",\n",
+    "    height=600,\n",
+    "    cad_width=800,\n",
+    "    control=\"trackball\",\n",
+    "    tools=True,\n",
+    "\n",
+    "    axes=True,\n",
+    "    axes0=True,\n",
+    "    grid=[True, False, True],\n",
+    ")"
    ]
   },
   {
