--- a/notebooks/Tests-and-demos.ipynb
+++ b/notebooks/Tests-and-demos.ipynb
@@ -23,7 +23,7 @@
     "\n",
     "from cad_viewer_widget.utils import numpyify\n",
     "\n",
-    "names = [\"hexapod\", \"hexapod_m\", \"box\", \"box1\", \"boxes\", \"edges\", \"faces\", \"vertices\", \"pylones\", \"box-edges\", \"box-faces\", \"box-vertices\"]\n",
+    "names = [\"hexapod\", \"box\", \"box1\", \"boxes\", \"edges\", \"faces\", \"vertices\", \"box-edges\", \"box-faces\", \"box-vertices\"]\n",
     "objects = {}\n",
     "states = {}\n",
     "\n",
@@ -195,7 +195,7 @@
    "id": "deb41d73-8331-41ac-abd5-0c3c478c07f7",
    "metadata": {},
    "source": [
-    "# Use default sidecar"
+    "## Use default sidecar"
    ]
   },
   {
@@ -242,7 +242,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "cv.widget.zoom = 1"
+    "cv.widget.zoom = 1.5"
    ]
   },
   {
@@ -412,6 +412,131 @@
   },
   {
    "cell_type": "markdown",
+   "id": "1b1f540d-5565-4476-8770-a159fde93cf4",
+   "metadata": {},
+   "source": [
+    "# Camera location handling and reset_camera"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "09de5789-5c04-4038-a79f-c6dad47c2f89",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "cv = open_viewer(\n",
+    "    title=\"Example\",\n",
+    "    cad_width=640,\n",
+    "    height=480,\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d65bbda7-b353-474c-8fa1-27349e089063",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "name = \"faces\"\n",
+    "control = \"orbit\"\n",
+    "control = \"trackball\"\n",
+    "\n",
+    "show(\n",
+    "    objects[name], \n",
+    "    states[name],\n",
+    "    title=\"Example\",\n",
+    "    control=control,\n",
+    "    position=(-55, 68, -31),\n",
+    "    quaternion=None if control == \"orbit\" else (-0.6566, 0.4828, 0.5604, 0.1470),\n",
+    "    zoom=0.5,\n",
+    "    reset_camera=True\n",
+    ")\n",
+    "cv.position, cv.quaternion, cv.zoom"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d9ba15c8-1e31-4317-b956-9ac94fd83ddc",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "cv.position, cv.quaternion, cv.zoom"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ff519084-0533-453e-875e-b7a396942b7e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "cv.position = (35, 6, 87)\n",
+    "cv.quaternion = None if control == \"orbit\" else (0.1619, 0.1017, 0.9068, 0.3756)\n",
+    "cv.zoom = 0.8\n",
+    "cv.position, cv.quaternion, cv.zoom"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "73a613a8-06c6-4762-a004-b912c1b8c0ed",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "name = \"edges\"\n",
+    "\n",
+    "show(\n",
+    "    objects[name], \n",
+    "    states[name],\n",
+    "    title=\"Example\",\n",
+    "    control=control,\n",
+    "    reset_camera=False\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a079f870-d8d4-45ad-ad4e-e4724d414e8e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "cv.position, cv.quaternion, cv.zoom"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "445a6a39-3858-4d6a-86bb-a36687c8082d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "name = \"vertices\"\n",
+    "\n",
+    "show(\n",
+    "    objects[name], \n",
+    "    states[name],\n",
+    "    title=\"Example\",\n",
+    "    control=control,\n",
+    "    reset_camera=True\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "fd856699-fc5e-4588-838e-b0c4d20e4115",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "cv.position, cv.quaternion, cv.zoom"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "4dee49a8-9747-4bdf-ac30-422ef5edc51c",
    "metadata": {},
    "source": [
@@ -471,62 +596,25 @@
     "show(\n",
     "    objects[names[0]],\n",
     "    states[names[0]],\n",
-    "    title=\"Examples\"    \n",
+    "    title=\"Examples\",\n",
+    "#    zoom=0.75,\n",
+    "    js_debug=True\n",
     ")\n",
     "menu"
    ]
   },
   {
-   "cell_type": "markdown",
-   "id": "da05a3f4-5077-46aa-8605-60f901683582",
-   "metadata": {},
-   "source": [
-    "# Camera position control"
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "dfc24b91-eacb-4d21-809d-5fd0c599e981",
+   "id": "715ae4a4-0a68-4fd6-97e8-92d0fc619571",
    "metadata": {},
    "outputs": [],
    "source": [
-    "p0 = cv.position\n",
-    "if cv.control == \"trackball\":\n",
-    "    q0 = cv.quaternion\n",
-    "else:\n",
-    "    q0 = None\n",
-    "p0, q0"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "73daae57-3e17-4be3-be0f-a18f03c2135d",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "cv.position = [-580.0, 200.0, 750.0]\n",
+    "from cad_viewer_widget.boundingbox import combined_bb\n",
     "\n",
-    "if cv.control == \"trackball\":\n",
-    "    cv.quaternion = [-0.33, 0.026, 0.91, 0.24]\n",
-    "\n",
-    "cv.zoom = 0.5"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "864f4d05-7e5a-4242-9ee5-ed9b3f9a41ad",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "cv.position = p0\n",
-    "\n",
-    "if cv.control == \"trackball\":\n",
-    "    cv.quaternion = q0\n",
-    "    \n",
-    "cv.zoom = 1"
+    "bb = combined_bb(objects[\"box1\"])\n",
+    "bb._calc()\n",
+    "bb.center"
    ]
   },
   {
