restructured the cells

--- a/notebooks/Tests-and-demos.ipynb
+++ b/notebooks/Tests-and-demos.ipynb
@@ -115,7 +115,7 @@
    "id": "57678a36-1103-4c96-ae39-f2f79a85921a",
    "metadata": {},
    "source": [
-    "## show"
+    "## Show command"
    ]
   },
   {
@@ -415,7 +415,7 @@
    "id": "1b1f540d-5565-4476-8770-a159fde93cf4",
    "metadata": {},
    "source": [
-    "# Camera location handling and reset_camera"
+    "# Camera location handling"
    ]
   },
   {
@@ -441,7 +441,7 @@
    "source": [
     "name = \"faces\"\n",
     "control = \"orbit\"\n",
-    "control = \"trackball\"\n",
+    "#control = \"trackball\"\n",
     "\n",
     "show(\n",
     "    objects[name], \n",
@@ -480,6 +480,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "b2810cbf-4d65-4343-9011-acf027f53961",
+   "metadata": {},
+   "source": [
+    "### reset_camera=False"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "73a613a8-06c6-4762-a004-b912c1b8c0ed",
@@ -505,6 +513,14 @@
    "outputs": [],
    "source": [
     "cv.position, cv.quaternion, cv.zoom"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b679f0a4-1453-4d7d-94b6-d2980a025c37",
+   "metadata": {},
+   "source": [
+    "### reset_camera=True"
    ]
   },
   {
@@ -557,14 +573,6 @@
     "    height=480\n",
     ")\n",
     "cv.js_debug=True"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "6847f42d-0bba-4b60-aa70-d1f77df57d5c",
-   "metadata": {},
-   "source": [
-    "## Adding shapes"
    ]
   },
   {
@@ -622,7 +630,7 @@
    "id": "ceca8f0b-8b51-4748-b36a-72f358a2284a",
    "metadata": {},
    "source": [
-    "# Widget interaction"
+    "## Widget interaction"
    ]
   },
   {
@@ -801,7 +809,7 @@
    "id": "874c1bb1-38ad-42ae-aef4-c1f62888d7c9",
    "metadata": {},
    "source": [
-    "# Clipping handling"
+    "## Clipping handling"
    ]
   },
   {
@@ -901,7 +909,7 @@
    "id": "ddb9b01a-5938-4e3b-b945-240f5d09b8b3",
    "metadata": {},
    "source": [
-    "# Rotations"
+    "## Rotations"
    ]
   },
   {
@@ -1099,14 +1107,22 @@
   }
  ],
  "metadata": {
-  "language_info": {
-   "name": "python",
-   "pygments_lexer": "ipython3"
-  },
   "kernelspec": {
    "display_name": "Python 3",
    "language": "python",
    "name": "python3"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.8.8"
   }
  },
  "nbformat": 4,
