--- a/notebooks/Tests-and-demos.ipynb
+++ b/notebooks/Tests-and-demos.ipynb
@@ -23,7 +23,7 @@
     "\n",
     "from cad_viewer_widget.utils import numpyify\n",
     "\n",
-    "names = [\"hexapod\", \"box\", \"box1\", \"boxes\", \"edges\", \"faces\", \"vertices\", \"box-edges\", \"box-faces\", \"box-vertices\"]\n",
+    "names = [\"hexapod\", \"box\", \"box1\", \"boxes\", \"faces\", \"edges\", \"vertices\", \"box-faces\", \"box-edges\", \"box-vertices\", \"longbox\"]\n",
     "objects = {}\n",
     "states = {}\n",
     "\n",
@@ -589,6 +589,8 @@
     "    disabled=False,\n",
     ")\n",
     "\n",
+    "control = \"trackball\"\n",
+    "\n",
     "def on_change(change):\n",
     "    if change['type'] == 'change' and change['name'] == 'value':\n",
     "        name = change['new']\n",
@@ -596,7 +598,7 @@
     "            objects[name],\n",
     "            states[name],\n",
     "            title=\"Examples\",\n",
-    "            control=\"orbit\"\n",
+    "            control=control\n",
     "        )\n",
     "\n",
     "menu.observe(on_change)\n",
@@ -605,6 +607,7 @@
     "    objects[names[0]],\n",
     "    states[names[0]],\n",
     "    title=\"Examples\",\n",
+    "    control=control,\n",
     "#    zoom=0.75,\n",
     "    js_debug=True\n",
     ")\n",
@@ -614,15 +617,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "715ae4a4-0a68-4fd6-97e8-92d0fc619571",
+   "id": "072d80ef-320d-4e6a-9ac3-bec3e3d07064",
    "metadata": {},
    "outputs": [],
    "source": [
-    "from cad_viewer_widget.boundingbox import combined_bb\n",
-    "\n",
-    "bb = combined_bb(objects[\"box1\"])\n",
-    "bb._calc()\n",
-    "bb.center"
+    "from cad_viewer_widget.utils import "
    ]
   },
   {
