--- a/notebooks/Tests-and-demos.ipynb
+++ b/notebooks/Tests-and-demos.ipynb
@@ -36,6 +36,24 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "78fdf9c0-e275-4ded-be2c-a16edc6c0bc0",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "name = \"hexapod\"\n",
+    "cv = show(\n",
+    "    objects[name], \n",
+    "    states[name],\n",
+    "    title=\"CVW 1\",\n",
+    "    height=480,\n",
+    "    cad_width=640,\n",
+    "    tools=True,\n",
+    ")"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "1adc86c0-7f97-413e-852f-8abd668f30ca",
    "metadata": {},
@@ -988,7 +1006,7 @@
     "\n",
     "    axes=True,\n",
     "    axes0=True,\n",
-    "    grid=[True, False, True],\n",
+    "    grid=[True, False, False],\n",
     ")"
    ]
   },
@@ -1041,7 +1059,7 @@
     "    # move upper leg\n",
     "    cv.add_track(AnimationTrack(f\"/bottom/{name}\", \"rz\", *horizontal(4, \"middle\" in name)))\n",
     "\n",
-    "cv.animate(5)\n",
+    "cv.animate(3)\n",
     "cv.play()"
    ]
   },
@@ -1077,7 +1095,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "cv.clear_tracks()"
+    "# cv.clear_tracks()"
    ]
   },
   {
@@ -1085,7 +1103,7 @@
    "id": "fe96062a-b8fc-4b29-99e1-60b266793cba",
    "metadata": {},
    "source": [
-    "# Embedding (experimental)"
+    "# Export HTML"
    ]
   },
   {
@@ -1095,13 +1113,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from cad_viewer_widget.embed import embed\n",
-    "\n",
-    "name = \"box1\"\n",
-    "sh = json.dumps(objects[name], default=serializer)\n",
-    "st = json.dumps(states[name])\n",
-    "\n",
-    "embed(sh, st, tools=False, axes=True, transparent=True)"
+    "cv.export_html()"
    ]
   }
  ],
