--- a/notebooks/Tests-and-demos.ipynb
+++ b/notebooks/Tests-and-demos.ipynb
@@ -36,21 +36,79 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "04a3c1df-a49a-4765-8552-673a2429484d",
+   "metadata": {},
+   "source": [
+    "## Cell view"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "78fdf9c0-e275-4ded-be2c-a16edc6c0bc0",
    "metadata": {},
    "outputs": [],
    "source": [
-    "name = \"hexapod\"\n",
+    "name = \"boxes\"\n",
     "cv = show(\n",
     "    objects[name], \n",
     "    states[name],\n",
-    "    title=\"CVW 1\",\n",
     "    height=480,\n",
     "    cad_width=640,\n",
     "    tools=True,\n",
+    "    js_debug=True\n",
     ")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "7324f596-ef6c-45b8-a1f0-e918ab84ca1b",
+   "metadata": {},
+   "source": [
+    "## Exports\n",
+    "\n",
+    "**Modify view before exporting**"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2b19aff3-26b5-435e-899f-016a6459fefe",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "cv.export_png(\"boxes.png\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "115f7fb2-5a84-401c-9672-8cc1e51446cc",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "cv.export_html()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d153a2d3-fdae-4683-ad6e-28ad976e52a4",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "cv.pin_as_png() # same as pressing the pin top right button"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "0e7076e7-2923-459b-8696-77052d2f82d6",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "cv.clip_planes"
    ]
   },
   {
@@ -256,16 +314,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "56901773-4222-4aa4-96dc-ea6a33af7b6f",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "cv.widget.zoom = 1.5"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
    "id": "e0a45056-32e7-48a3-b89a-5590e6e9f738",
    "metadata": {},
    "outputs": [],
@@ -414,18 +462,6 @@
     "    grid=(False, False, False),\n",
     "    tools=True,\n",
     ")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "f32e38d8-cecd-456c-a722-4756c7142b2d",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from ipywidgets.embed import embed_minimal_html\n",
-    "# !!! sc.close()\n",
-    "embed_minimal_html('export.html', views=[cv2.widget], title='Widgets export')"
    ]
   },
   {
@@ -630,16 +666,6 @@
     "    js_debug=True\n",
     ")\n",
     "menu"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "072d80ef-320d-4e6a-9ac3-bec3e3d07064",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from cad_viewer_widget.utils import "
    ]
   },
   {
@@ -998,7 +1024,7 @@
     "cv = show(\n",
     "    objects[name],\n",
     "    states[name],\n",
-    "    title=\"Animation\",\n",
+    "#    title=\"Animation\",\n",
     "    height=600,\n",
     "    cad_width=800,\n",
     "    control=\"trackball\",\n",
@@ -1099,33 +1125,31 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "id": "fe96062a-b8fc-4b29-99e1-60b266793cba",
-   "metadata": {},
-   "source": [
-    "# Export HTML"
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "00385a40-2669-499a-ae91-5be0da652d4b",
+   "id": "56a8f6ff-f27e-4b28-be21-16a5148cc636",
    "metadata": {},
    "outputs": [],
-   "source": [
-    "cv.export_html()"
-   ]
+   "source": []
   }
  ],
  "metadata": {
-  "language_info": {
-   "name": "python",
-   "pygments_lexer": "ipython3"
-  },
   "kernelspec": {
    "display_name": "Python 3",
    "language": "python",
    "name": "python3"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.8.8"
   }
  },
  "nbformat": 4,
